5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1684_1100.log
== TEST (2019-04-22 19:00:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2 or valor != 5 or valor != 10 or valor != 20 or valor != 50 valor != 100):
	print("Entrada: ", valor)
	print("Animal : Invalido")
	
-- ERROR:
File "XXXX", line 7
    if (valor != 2 or valor != 5 or valor != 10 or valor != 20 or valor != 50 valor != 100):
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:01:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor !=2) or (valor !=5) or (valor !=10) or (valor !=20) or (valor !=50) or (valor !=100):
	print("Entrada: ", valor)
	print("Animal : Invalido")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:04:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor !=2) or (valor !=5) or (valor !=10) or (valor !=20) or (valor !=50) or (valor !=100):
	print("Entrada: ", valor)
	print("Animal : Invalido")
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garça")
elif (valor = 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 15
    elif (valor = 10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:04:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor !=2) or (valor !=5) or (valor !=10) or (valor !=20) or (valor !=50) or (valor !=100):
	print("Entrada: ", valor)
	print("Animal : Invalido")
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor = 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 15
    elif (valor = 10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:04:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor !=2) or (valor !=5) or (valor !=10) or (valor !=20) or (valor !=50) or (valor !=100):
	print("Entrada: ", valor)
	print("Animal : Invalido")
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:05:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor !=2) or (valor !=5) or (valor !=10) or (valor !=20) or (valor !=50) or (valor !=100):
	print("Entrada: ", valor)
	print("Animal : Invalido")	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:07:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Entrada: ", valor)
	print("Animal : Invalido")	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:07:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Entrada: ", valor)
	print("Animal : Invalido")	

-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Entrada: ", valor)
	print("Animal : Invalido")	
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Entrada: ", valor)
	print("Animal : Invalido")	
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))


	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 9
    elif (valor == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Entrada: ", valor)

elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:09:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

	print("Entrada: ", valor)

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Animal : Invalido")	
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- ERROR:
File "XXXX", line 7
    print("Entrada: ", valor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:09:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada: ", valor)

if (valor != 2) or (valor != 5) or (valor != 10) or (valor != 20) or (valor != 50) or (valor != 100):
	print("Animal : Invalido")	
	
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal : Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:10:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada: ", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:10:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada: ", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.149768
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:11:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada: ", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:11:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:11:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.149833
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:12:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.136289
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:12:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:12:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:12:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.19453
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:13:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:13:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.143903
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:14:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
else:
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:15:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.197031
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:15:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:16:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if (valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.257886
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:17:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.129113
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:17:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.177629
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:17:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:17:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.199689
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:19:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:19:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.128427
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:19:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor != 2) and (valor != 5) and (valor != 10) and (valor != 20) and (valor != 50) and (valor != 100)):
	print("Animal : Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.193319
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal : Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:20:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

valor = int(input("Valor da cedula: "))

print("Entrada:", valor)

if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
	
-- EXECUTION TIME:
0.190735
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
